# ArduinoCosmTemp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.metadata/.plugins/org.eclipse.cdt.core/: ArduinoApp.1359825264404.pdom  ArduinoCoreLibrary.1359824834735.pdom
.metadata/.plugins/org.eclipse.cdt.make.core/: ArduinoApp.sc  ArduinoCoreLibrary.sc
.metadata/.plugins/org.eclipse.core.resources/.projects/ArduinoApp/: .markers  1.tree  2.tree  3.tree  4.tree
.metadata/.plugins/org.eclipse.core.resources/.projects/ArduinoCoreLibrary/: .markers  1.tree  2.tree  3.tree  4.tree
.metadata/.plugins/org.eclipse.core.resources/.root/: .markers  2.tree  3.tree  4.tree  6.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
.metadata/.plugins/org.eclipse.pde.core/.cache/: clean-cache.properties
.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
ArduinoApp/: .cproject  .project  CMakeLists.txt  DS18B20.h  main.cpp
ArduinoApp/Debug/: ArduinoApp.map  makefile  objects.mk  sources.mk  subdir.mk
ArduinoCoreLibrary/: .cproject
ArduinoCoreLibrary/Mega2560/: makefile
ArduinoCoreLibrary/Mega2560/src/: subdir.mk
ArduinoCoreLibrary/src/: IPAddress.h
(+12 files in other folders)
